third_party/rust/chromium_crates_io/vendor/cxx-1.0.130/tests/ui/lifetime_extern_cxx.stderr
error: extern C++ function with lifetimes must be declared in `unsafe extern "C++"` block
 --> tests/ui/lifetime_extern_cxx.rs:5:9
  |
5 |         unsafe fn f<'a>(&'a self, arg: &str) -> &'a str;
  |         ^^^^^^^^^^^^^^^
